# numpydoc_decorator

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  shell.nix
.github/workflows/: linting.yml  release.yml  tests.yml
docstring_builder/: numpydoc.py
numpydoc_decorator/: __init__.py  example.py  impl.py
tests/: test_numpydoc.py  test_numpydoc_decorator.py
