[tool.poetry]
name = "numpydoc_decorator"
version = "0.0.0"
description = ""
authors = ["Alistair Miles <alimanfoo@googlemail.com>"]
readme = "README.md"
packages = [{include = "numpydoc_decorator"}]

[tool.poetry.dependencies]
python = "^3.7"
typing_extensions = "*"
numpy = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-xdist = "*"
testfixtures = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
