[tool.poetry]
name = "numpydoc_decorator"
version = "0.0.0"
description = ""
authors = ["Alistair Miles <alimanfoo@googlemail.com>"]
readme = "README.md"
packages = [{include = "numpydoc_decorator"}]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
typing_extensions = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-xdist = "*"
testfixtures = "*"
numpy = [
    {version = "<1.22", python=">=3.7.1,<3.8"},
    {version = ">=1.22", python=">=3.8"},
]
numpydoc = "*"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
