[tool.poetry]
name = "numpydoc_decorator"
version = "0.0.0"
description = ""
authors = ["Alistair Miles <alimanfoo@googlemail.com>"]
readme = "README.md"
packages = [{include = "numpydoc_decorator"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
typing_extensions = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "*"
codespell = "*"
colorama = "*"
isort = "*"
mypy = "*"
numpy = "*"
numpydoc = "*"
pydantic = "*"
pytest = "*"
pytest-xdist = "*"
testfixtures = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.codespell]
skip = ".git,.mypy_cache,.vscode,__pycache__,pyproject.toml,poetry.lock"
ignore-words-list = "jupyter,iff"  # prevent jupyter -> jupiter or iff -> if
check-filenames = true
uri-ignore-words-list = "*"

[tool.isort]
profile = "black"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.pylint]
reports.output-format = "colorized"
